# osgMap

./: CMakeLists.txt  README.md  poruszanie się po mapie.txt
data/: buildings_levels.shx  gis_osm_landuse_a_free_1.shx  gis_osm_roads_free_1.shx  gis_osm_water_a_free_1.dbf  gis_osm_water_a_free_1.shp  gis_osm_water_a_free_1.shx  osm_points.dbf  osm_points.shp  osm_points.shx  parallax.frag  parallax.vert  standard.frag  standard.vert  wind.frag  wind.vert
data/images/: loading.dds
src/: CMakeLists.txt  HUD.cpp  HUD.h  buildings.cpp  camera_manip.cpp  camera_manip.h  landuse.cpp  map.cpp  roads.cpp  water.cpp  wind.frag  wind.vert
